[package]
name = "toml-config-derive"
version = "0.1.0"
authors = [
    "Joakim Frostegård <joakim.frostegard@gmail.com>",
    "Daniel Hackbarth <daniel.hackbarth96@gmail.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greatest-ape/toml-config"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.71"
