[package]
name = "toml-config"
description = "Serialize toml with comments"
keywords = ["toml"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "toml_config"

[dependencies]
toml = "0.5"
toml-config-derive.workspace = true

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
quickcheck = "1"
quickcheck_macros = "1"
